--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@{
+﻿@{
+    Layout = "_Layout";
     ViewBag.Title = "Home Page";
 }
 <header class="container-fluid bg-primary text-white text-center ">
@@ -277,52 +277,6 @@
             <div class="slide"><img src="~/images/partners/TDSB LOGO.png"></div>
             <div class="slide"><img src="~/images/partners/HCDSB LOGO.png"></div>
             <div class="slide"><img src="~/images/partners/SHERIDAN LOGO.png"></div>
-        </div>
-    </div>
-</section>
-<section class="page-section text-white form-section" id="contact_us">
-    <div class="jumbotron">
-        <h2 class="page-section-heading text-center text-uppercase text-secondary">Contact Us</h2>
-        <div class="container contact-form">
-            <div class="contact-image">
-                <img src="~/images/logo/SEED LOGO.png" alt="rocket_contact" />
-            </div>
-            <form method="post">
-                <h3 class="text-primary">Who are you?</h3>
-                <div class="row py-2 text-secondary">
-                    <div class="col-md-12 text-center">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="contactOptions" id="studentCheckBox" value="option1">
-                            <label class="form-check-label" for="studentCheckBox">Student</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="contactOptions" id="TeacherCheckBox" value="option1">
-                            <label class="form-check-label" for="TeacherCheckBox">Teachers/Partners</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row py-2">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group text-center">
-                    <input type="submit" name="btnSubmit" class="btnContact text-uppercase" value="Send Message" />
-                </div>
-            </form>
         </div>
     </div>
 </section>
