carousel slightly changed + section links are done

--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -51,13 +51,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0 submenu-tabs">
                     <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link active dropdown-toggle" asp-action="Index"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Home
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">SEED STORY</a>
-                            <a class="dropdown-item" href="#">SEED METHOD</a>
-                            <a class="dropdown-item" href="#">SEED PARTNER</a>
+                            <a class="dropdown-item" href="#seed_story">SEED STORY</a>
+                            <a class="dropdown-item" href="#seed_method">SEED METHOD</a>
+                            <a class="dropdown-item" href="#seed_partners">SEED PARTNERS</a>
                         </div>
                     </li>
                     <li class="nav-item">
