--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-xl-7 col-md-12 col-xs-12 p-0">
-            <div id="main-carousel" class="carousel slide forceFullHeight" data-ride="carousel">
+            <div id="main-carousel" class="carousel slide forceFullHeight carousel-fade" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#main-carousel" data-slide-to="1"></li>
@@ -24,22 +24,22 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100 img-fluid resizable-img" src="~/images/6pix01.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix01.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img" src="~/images/6pix02.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix02.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img" src="~/images/6pix03.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix03.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img" src="~/images/6pix04.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix04.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img" src="~/images/6pix05.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix05.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid resizable-img" src="~/images/6pix06A.png" alt="">
+                        <img class="d-block w-100 img-fluid resizable-img carousel-img" src="~/images/6pix06A.png" alt="">
                     </div>
                 </div><!-- /.carousel-inner -->
 
@@ -96,7 +96,7 @@
     </div>
 </header>
 <!-- Seed story Section-->
-<section class="page-section text-white" id="about">
+<section class="page-section text-white" id="seed_story">
     <div class="container overflow-hidden">
         <!-- About Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary">Seed story</h2>
@@ -117,7 +117,7 @@
                     <div class="card-body text-center">
                         <h4 class="card-title"><i class="fas fa-user"></i></h4>
                         <h4 class="card-subtitle pt-3">323</h4>
-                        <a href="#" class="nav-link p-0 pt-0"><h5>Courses</h5></a>
+                        <a href="#" class="nav-link p-0 pt-0"><h5>Instructors</h5></a>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                     <div class="card-body text-center">
                         <h4 class="card-title"><i class="fas fa-calendar-alt"></i></h4>
                         <h4 class="card-subtitle pt-3">230</h4>
-                        <a href="#" class="nav-link p-0 pt-0"><h5>Courses</h5></a>
+                        <a href="#" class="nav-link p-0 pt-0"><h5>Events</h5></a>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                     <div class="card-body text-center">
                         <h4 class="card-title"><i class="fas fa-graduation-cap"></i></h4>
                         <h4 class="card-subtitle pt-3">762</h4>
-                        <a href="#" class="nav-link p-0 pt-0"><h5>Courses</h5></a>
+                        <a href="#" class="nav-link p-0 pt-0"><h5>Offers</h5></a>
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@
     </div>
 </section>
 
-<section class="page-section text-white mb-0" id="method">
+<section class="page-section text-white mb-0" id="seed_method">
     <div class="jumbotron">
         <div class="container pb-5">
             <!-- Method Section Heading-->
@@ -265,7 +265,7 @@
         </div>
     </div>
 </section>
-<section class="page-section text-white" id="partners">
+<section class="page-section text-white" id="seed_partners">
     <h2 class="page-section-heading text-center text-uppercase text-secondary">Seed Partners</h2>
     <div class="container pb-5">
         <div class="customer-logos slider pt-5">
