Added opacity class and border on about secion

--- a/SeedProject_V6/wwwroot/css/styles.css
+++ b/SeedProject_V6/wwwroot/css/styles.css
@@ -10474,3 +10474,7 @@ html {
     height: 10px;
     border-radius: 100%;
 }
+
+.opacity {
+    background-color: rgba(255, 255, 255, 0.5) !important;
+}
