Filled School Program page with content / Added some styles / Added placeholder to the image folder / Added images to graphs folder

--- a/SeedProject_V6/Views/Home/SchoolProgram.cshtml
+++ b/SeedProject_V6/Views/Home/SchoolProgram.cshtml
@@ -2,3 +2,113 @@
     Layout = "_Layout";
     ViewBag.Title = "School Program";
 }
+
+<section class="page-section text-white mb-0 pt-0" id="seed_schoolprogram">
+    <div class="jumbotron">
+        <div class="container">
+            <h2 class="page-section-heading text-center text-uppercase pb-5">School program partnership</h2>
+            <div class="row text-uppercase d-flex flex-row justify-content-between">
+                <div class="border rounded p-1 bg-white col-xl-4 d-flex flex-column justify-content-between text-secondary text-center">
+                    <h4>Why Canada?</h4>
+                    <img class="" src="~/images/graphs/Canada.png" />
+                    <h6>World #1 in Education</h6>
+                </div>
+                <div class="border p-1 rounded bg-white col-xl-4 d-flex flex-column justify-content-between text-secondary text-center">
+                    <h4>Why Ontario?</h4>
+                    <img class="" src="~/images/graphs/OntarioLearning.png" />
+                    <h6>Canada #1 Achievement</h6>
+                </div>
+                <div class="border rounded p-1 bg-white col-xl-3 d-flex flex-column justify-content-between text-secondary text-center">
+                    <h4>Why Seed?</h4>
+                    <img class="" src="~/images/partners/HCDSB LOGO.png" />
+                    <h6>95% Graduation success</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="page-section mb-0" id="seed_partners">
+    <div class="container">
+        <div class="program-title pb-5">
+            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-uppercase text-white bg-secondary">Ontario Public School K-12 : North America #4 School System</h3></a>
+</div>
+        <div class="row">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Toronto</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Largest in Canada</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Oakville</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Prestigious & Connected</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Hamilton</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Elite & Egalitarian</h6>
+            </div>
+        </div>
+        <div class="program-title py-5">
+            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-white text-uppercase bg-secondary">Lyn-Rose K-12 : an IB elite school</h3></a>
+</div>
+        <div class="row">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Toronto</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Largest in Canada</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Oakville</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Prestigious & Connected</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Hamilton</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Elite & Egalitarian</h6>
+            </div>
+        </div>
+        <div class="program-title py-5">
+            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-uppercase bg-secondary">S.E.E.D. Credit Program</h3></a>
+        </div>
+        <div class="row">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Toronto</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Largest in Canada</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Oakville</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Prestigious & Connected</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Hamilton</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Elite & Egalitarian</h6>
+            </div>
+        </div>
+        <div class="program-title py-5">
+            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-uppercase bg-secondary">Pathway to Top University</h3></a>
+        </div>
+        <div class="row">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Toronto</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Largest in Canada</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Oakville</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Prestigious & Connected</h6>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Hamilton</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h6>Elite & Egalitarian</h6>
+            </div>
+        </div>
+    </div>
+</section>
