--- a/SeedProject_V6/wwwroot/css/styles.css
+++ b/SeedProject_V6/wwwroot/css/styles.css
@@ -10478,3 +10478,7 @@ html {
 .opacity {
     background-color: rgba(255, 255, 255, 0.5) !important;
 }
+
+.partners-link:hover {
+    color: #1abc9c;
+}
