Created Esl page / Test prepartion page / AcademicBoost page / Filled with content all of them / Remove course page ( since we don't need it)

--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -68,9 +68,9 @@
                             Course
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" asp-action="Course">SKILL LEARNING</a>
-                            <a class="dropdown-item" asp-action="Course">ACADEMIC BOOST</a>
-                            <a class="dropdown-item" asp-action="Course">TEST PREP</a>
+                            <a class="dropdown-item" asp-action="Esl">SKILL LEARNING</a>
+                            <a class="dropdown-item" asp-action="AcademicBoost">ACADEMIC BOOST</a>
+                            <a class="dropdown-item" asp-action="TestPrep">TEST PREP</a>
                         </div>
                     </li>
                     <li class="nav-item">
