some changes in layout are made

--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0 submenu-tabs">
                     <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" asp-action="Index"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" asp-action="Index" asp-controller="Home" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Home
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
