--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -51,10 +51,11 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0 submenu-tabs">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" asp-action="Index" asp-controller="Home" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Home
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" asp-action="Index">HOME</a>
                             <a class="dropdown-item" href="#seed_story">SEED STORY</a>
                             <a class="dropdown-item" href="#seed_method">SEED METHOD</a>
                             <a class="dropdown-item" href="#seed_partners">SEED PARTNERS</a>
