Added content to ESL, ACE, TAP pages / Fixed dropdown in a layout

--- a/SeedProject_V6/Views/Home/AcademicBoost.cshtml
+++ b/SeedProject_V6/Views/Home/AcademicBoost.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Academic Boost - Seed";
 }
 
-<section class="page-section text-white mb-0 pt-0" id="seed_academic_boost">
+<section class="page-section text-white mb-0 pt-0" id="seed_academic_boost_header">
     <div class="jumbotron">
         <div class="container pb-5">
             <!-- Method Section Heading-->
@@ -21,6 +21,47 @@
                         Students achievement proves that Target-Oriented Practice is most effective learning strategy.
                     </h5>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="page-section mb-0" id="seed_academic_boost_body">
+    <div class="container">
+        <h2 class="page-section-heading text-center text-uppercase text-secondary">S.E.E.D. Academic English</h2>
+        <div class="row py-5">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Vocabulary</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Art</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Sentences</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Creativity</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Answers</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Story</h5>
+            </div>
+        </div>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary pb-5">More on B.E.S.T</h2>
+        <div class="row">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Vocabulary</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Art</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Sentences</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Creativity</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Answers</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Story</h5>
             </div>
         </div>
     </div>
