--- a/SeedProject_V6/Views/Home/Esl.cshtml
+++ b/SeedProject_V6/Views/Home/Esl.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Experience Strengthens Learning - Seed";
 }
 
-<section class="page-section text-white mb-0 pt-0" id="seed_esl">
+<section class="page-section text-white mb-0 pt-0" id="seed_esl_header">
     <div class="jumbotron">
         <div class="container pb-5">
             <!-- Method Section Heading-->
@@ -26,7 +26,7 @@
     </div>
 </section>
 
-<section class="page-section mb-0" id="seed_partners">
+<section class="page-section mb-0" id="seed_esl_body">
     <div class="container">
         <h2 class="page-section-heading text-center text-uppercase text-secondary">Seed english is different</h2>
         <div class="row py-5">
