--- a/SeedProject_V6/Views/Home/TestPrep.cshtml
+++ b/SeedProject_V6/Views/Home/TestPrep.cshtml
@@ -2,3 +2,67 @@
     Layout = "_Layout";
     ViewBag.Title = "Test Preparation - Seed";
 }
+
+<section class="page-section text-white mb-0 pt-0" id="seed_academic_boost_header">
+    <div class="jumbotron">
+        <div class="container pb-5">
+            <!-- Method Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary ">Miracle Begins with English Learning</h2>
+            <!-- Method Section Content-->
+            <div class="row pt-5 font-weight-bold text-uppercase">
+                <div class="col-xl-12 col-md-12 p-2 mb-3 d-flex flex-row justify-content-around border rounded bg-white opacity">
+                    <h5 class="text-wrap text-center text-secondary">
+                        SEED ACADEMY is an education hub specialized in providing one-top empowerment to help students achieve higher at school, Academically and Socially.
+                    </h5>
+                </div>
+                <div class="col-xl-12 col-md-12 p-2 d-flex flex-row justify-content-around border rounded bg-white opacity">
+                    <h5 class="text-wrap text-center text-secondary">
+                        Since 2012, S.E.E.D. has served students in Los Angeles (US), Toronto and Hamilton (Canada).
+                        Students achievement proves that Target-Oriented Practice is most effective learning strategy.
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="page-section mb-0" id="seed_academic_boost_body">
+    <div class="container">
+        <h2 class="page-section-heading text-center text-uppercase text-secondary">SEED English is different</h2>
+        <div class="row py-5">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Vocabulary</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Art</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Sentences</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Creativity</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Answers</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Story</h5>
+            </div>
+        </div>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary pb-5">Experience Strenghtens Learning</h2>
+        <div class="row">
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Vocabulary</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Art</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Sentences</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Creativity</h5>
+            </div>
+            <div class="col-xl-4 justify-content-between text-secondary text-center">
+                <h5>Not Just Answers</h5>
+                <img class="border rounded" src="~/images/placeholder.png" />
+                <h5>It is Story</h5>
+            </div>
+        </div>
+    </div>
+</section>
