Fixed dropdown navigation in the Navbar

--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -56,9 +56,9 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <!--<a class="dropdown-item" asp-action="Index">HOME</a>-->
-                            <a class="dropdown-item" href="#seed_story">SEED STORY</a>
-                            <a class="dropdown-item" href="#seed_method">SEED METHOD</a>
-                            <a class="dropdown-item" href="#seed_partners">SEED PARTNERS</a>
+                            <a class="dropdown-item" asp-action="Index" asp-fragment="seed_story">SEED STORY</a>
+                            <a class="dropdown-item" asp-action="Index" asp-fragment="seed_method">SEED METHOD</a>
+                            <a class="dropdown-item" asp-action="Index" asp-fragment="seed_partners">SEED PARTNERS</a>
                         </div>
                     </li>
                     <li class="nav-item">
