Added button with link for required pages / Fixed some leftovers

--- a/SeedProject_V6/Views/Home/SchoolProgram.cshtml
+++ b/SeedProject_V6/Views/Home/SchoolProgram.cshtml
@@ -69,9 +69,14 @@
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h6>Elite & Egalitarian</h6>
             </div>
+            <div class="col-xl-12 text-secondary pt-4">
+                <div class="float-right">
+                    <a class="btn btn-primary">Visit Lyn-Rose</a>
+                </div>
+            </div>
         </div>
         <div class="program-title py-5">
-            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-uppercase bg-secondary">S.E.E.D. Credit Program</h3></a>
+            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-white text-uppercase bg-secondary">S.E.E.D. Credit Program</h3></a>
         </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
@@ -89,9 +94,14 @@
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h6>Elite & Egalitarian</h6>
             </div>
+            <div class="col-xl-12 text-secondary pt-4">
+                <div class="float-right">
+                    <a class="btn btn-primary">Register today!</a>
+                </div>
+            </div>
         </div>
         <div class="program-title py-5">
-            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-uppercase bg-secondary">Pathway to Top University</h3></a>
+            <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-white text-uppercase bg-secondary">Pathway to Top University</h3></a>
         </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
