--- a/SeedProject_V6/Views/Home/TestPrep.cshtml
+++ b/SeedProject_V6/Views/Home/TestPrep.cshtml
@@ -53,15 +53,20 @@
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h5>It is Art</h5>
             </div>
-            <div class="col-xl-4 justify-content-between text-secondary text-center">
+            <div class="col-xl-4 justify-content-between text-secondary text-center ">
                 <h5>Not Just Sentences</h5>
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h5>It is Creativity</h5>
             </div>
-            <div class="col-xl-4 justify-content-between text-secondary text-center">
+            <div class="col-xl-4 justify-content-between text-secondary text-center ">
                 <h5>Not Just Answers</h5>
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h5>It is Story</h5>
+            </div>
+            <div class="col-xl-12 text-secondary pt-4">
+                <div class="float-right">
+                    <a class="btn btn-primary">Register today!</a>
+                </div>
             </div>
         </div>
     </div>
