--- a/SeedProject_V6/Views/Home/AcademicBoost.cshtml
+++ b/SeedProject_V6/Views/Home/AcademicBoost.cshtml
@@ -45,6 +45,11 @@
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h5>It is Story</h5>
             </div>
+            <div class="col-xl-12 text-secondary pt-4">
+                <div class="float-right">
+                    <a class="btn btn-primary">Register today!</a>
+                </div>
+            </div>
         </div>
         <h2 class="page-section-heading text-center text-uppercase text-secondary pb-5">More on B.E.S.T</h2>
         <div class="row">
@@ -63,6 +68,11 @@
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h5>It is Story</h5>
             </div>
+        <div class="col-xl-12 text-secondary pt-4">
+            <div class="float-right">
+                <a class="btn btn-primary">Register today!</a>
+            </div>
+        </div>
         </div>
     </div>
 </section>
