--- a/SeedProject_V6/Views/Home/Esl.cshtml
+++ b/SeedProject_V6/Views/Home/Esl.cshtml
@@ -63,6 +63,11 @@
                 <img class="border rounded" src="~/images/placeholder.png" />
                 <h5>It is Story</h5>
             </div>
+            <div class="col-xl-12 text-secondary pt-4">
+                <div class="float-right">
+                    <a class="btn btn-primary">Register today!</a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
