Added arrows / slide animation

--- a/SeedProject_V6/Views/Home/SchoolProgram.cshtml
+++ b/SeedProject_V6/Views/Home/SchoolProgram.cshtml
@@ -8,19 +8,28 @@
         <div class="container">
             <h2 class="page-section-heading text-center text-uppercase pb-5">School program partnership</h2>
             <div class="row text-uppercase d-flex flex-row justify-content-xl-between justify-content-lg-center justify-content-md-around">
-                <div class="border rounded p-1 bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-between text-secondary text-center">
+                <div class="border rounded p-1 bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-center text-secondary text-center">
                     <h4>Why Canada?</h4>
-                    <img class="" src="~/images/graphs/Canada.png" />
+                    <div class="item">
+                        <i class="fas fa-arrow-down arrow"></i>
+                    </div>
+                    <img class="my-2 graphics-img" src="~/images/graphs/Canada.png" />
                     <h6>World #1 in Education</h6>
                 </div>
-                <div class="border p-1 rounded bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-between text-secondary text-center">
+                <div class="border p-1 rounded bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-center text-secondary text-center">
                     <h4>Why Ontario?</h4>
-                    <img class="" src="~/images/graphs/OntarioLearning.png" />
+                    <div class="item">
+                        <i class="fas fa-arrow-down arrow"></i>
+                    </div>
+                    <img class="my-2 graphics-img" src="~/images/graphs/OntarioLearning.png" />
                     <h6>Canada #1 Achievement</h6>
                 </div>
-                <div class="border rounded p-1 bg-white col-xl-3 col-md-6 d-flex flex-column justify-content-between text-secondary text-center">
+                <div class="border rounded p-1 bg-white col-xl-3 col-md-6 d-flex flex-column justify-content-center text-secondary text-center">
                     <h4>Why Seed?</h4>
-                    <img class="" src="~/images/partners/HCDSB LOGO.png" />
+                    <div class="item">
+                        <i class="fas fa-arrow-down arrow"></i>
+                    </div>
+                    <img class="my-2 graphics-img" src="~/images/partners/HCDSB LOGO.png" />
                     <h6>95% Graduation success</h6>
                 </div>
             </div>
