--- a/SeedProject_V6/wwwroot/css/styles.css
+++ b/SeedProject_V6/wwwroot/css/styles.css
@@ -10490,3 +10490,26 @@ html {
 .dropdown-menu {
     margin-top: 0px;
 }
+
+.item {
+    margin-bottom: 10px;
+}
+
+.arrow {
+    animation: slide 1s ease-in-out infinite;
+}
+
+@keyframes slide {
+    0%, 100% {
+        transform: translate(0, 0);
+    }
+
+    50% {
+        transform: translate(0, 10px);
+    }
+}
+
+.graphics-img {
+    width: 100%;
+    height: 180px;
+}
