--- a/SeedProject_V6/Views/Home/SchoolProgram.cshtml
+++ b/SeedProject_V6/Views/Home/SchoolProgram.cshtml
@@ -8,29 +8,29 @@
         <div class="container">
             <h2 class="page-section-heading text-center text-uppercase pb-5">School program partnership</h2>
             <div class="row text-uppercase d-flex flex-row justify-content-xl-between justify-content-lg-center justify-content-md-around">
-                <div class="border rounded p-1 bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-center text-secondary text-center">
-                    <h4>Why Canada?</h4>
-                    <div class="item">
-                        <i class="fas fa-arrow-down arrow"></i>
+                <div class="card border rounded p-1 bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-center text-secondary text-center graphics-card">
+                    <img class="my-2 graphics-img card-img" src="~/images/graphs/Canada.png" />
+                    <div class="card-img-overlay d-flex flex-column justify-content-between">
+                        <h4 class="card-title">Why Canada?</h4>
+                        <i class="fas fa-arrow-down arrow1"></i>
+                        <h6 class="card-text">World #1 in Education</h6>
                     </div>
-                    <img class="my-2 graphics-img" src="~/images/graphs/Canada.png" />
-                    <h6>World #1 in Education</h6>
                 </div>
-                <div class="border p-1 rounded bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-center text-secondary text-center">
-                    <h4>Why Ontario?</h4>
-                    <div class="item">
-                        <i class="fas fa-arrow-down arrow"></i>
+                <div class="card border rounded p-1 bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-center text-secondary text-center graphics-card">
+                    <img class="my-2 graphics-img card-img" src="~/images/graphs/OntarioLearning.png" />
+                    <div class="card-img-overlay d-flex flex-column justify-content-between">
+                        <h4 class="card-title">Why Ontario?</h4>
+                        <i class="fas fa-arrow-down arrow2"></i>
+                        <h6 class="card-text">Canada #1 Achievement</h6>
                     </div>
-                    <img class="my-2 graphics-img" src="~/images/graphs/OntarioLearning.png" />
-                    <h6>Canada #1 Achievement</h6>
                 </div>
-                <div class="border rounded p-1 bg-white col-xl-3 col-md-6 d-flex flex-column justify-content-center text-secondary text-center">
-                    <h4>Why Seed?</h4>
-                    <div class="item">
-                        <i class="fas fa-arrow-down arrow"></i>
+                <div class="card border rounded p-1 bg-white col-xl-4 col-md-6 d-flex flex-column justify-content-center text-secondary text-center graphics-card">
+                    <img class="my-2 graphics-img card-img" src="~/images/partners/HCDSB LOGO.png" />
+                    <div class="card-img-overlay d-flex flex-column justify-content-between">
+                        <h4 class="card-title">Why Seed?</h4>
+                        <i class="fas fa-arrow-down arrow3"></i>
+                        <h6 class="card-text">95% Graduation success</h6>
                     </div>
-                    <img class="my-2 graphics-img" src="~/images/partners/HCDSB LOGO.png" />
-                    <h6>95% Graduation success</h6>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
     <div class="container">
         <div class="program-title pb-5">
             <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-uppercase text-white bg-secondary">Ontario Public School K-12 : North America #4 School System</h3></a>
-</div>
+        </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
                 <h5>Toronto</h5>
@@ -61,7 +61,7 @@
         </div>
         <div class="program-title py-5">
             <a href="#" class="nav-link"><h3 class="border border-secondary rounded text-center text-white text-uppercase bg-secondary">Lyn-Rose K-12 : an IB elite school</h3></a>
-</div>
+        </div>
         <div class="row">
             <div class="col-xl-4 justify-content-between text-secondary text-center">
                 <h5>Toronto</h5>
