--- a/SeedProject_V6/wwwroot/css/styles.css
+++ b/SeedProject_V6/wwwroot/css/styles.css
@@ -10499,6 +10499,27 @@ html {
     animation: slide 1s ease-in-out infinite;
 }
 
+.arrow1 {
+    animation: slide 1s ease-in-out infinite;
+    position: absolute;
+    top: 25%;
+    left: 10%;
+}
+
+.arrow2 {
+    animation: slide 1s ease-in-out infinite;
+    position: absolute;
+    top: 60%;
+}
+
+.arrow3 {
+    animation: slide 1s ease-in-out infinite;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+}
+
+
 @keyframes slide {
     0%, 100% {
         transform: translate(0, 0);
@@ -10512,4 +10533,8 @@ html {
 .graphics-img {
     width: 100%;
     height: 180px;
+}
+
+.graphics-card {
+    height: 310px !important;
 }
