goToCart method is implemented fixed layout for the products page

--- a/SeedProject_V6/Views/Product/AllProducts.cshtml
+++ b/SeedProject_V6/Views/Product/AllProducts.cshtml
@@ -21,9 +21,9 @@
             {
                 <tr class="">
                     <td><img src="@item.ProductInfo.ProductImg" style="width: 150px; height: 150px;"/></td>
-                    <td>@item.ProductInfo.ProductDescription</td>
-                    <td>@item.ProductInfo.ProductPrice $</td>
-                    <td><a class='btn btn-primary' href="#" style="width: 150px;">Add to Card</a></td>
+                    <td class="text-center align-middle">@item.ProductInfo.ProductDescription</td>
+                    <td class="text-center align-middle">@item.ProductInfo.ProductPrice $</td>
+                    <td class="text-center align-middle"><a class='btn btn-primary' style="width: 150px;" asp-action="goToCart" asp-route-ProductID="@item.ProductId">Add to Card</a></td>
                 </tr>
             }
         </table>
