--- a/SeedProject_V6/Views/Shared/_Layout.cshtml
+++ b/SeedProject_V6/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" asp-action="Esl">SKILL LEARNING</a>
                             <a class="dropdown-item" asp-action="AcademicBoost">ACADEMIC BOOST</a>
-                            <a class="dropdown-item" asp-action="TestPrep">TEST PREP</a>
+                            <a class="dropdown-item" asp-action="Tap">TEST PREP</a>
                         </div>
                     </li>
                     <li class="nav-item">
