Added Discount field on the bottom of the Price field / Added links to other pages

--- a/SeedProject_V6/Views/Home/SeedCredit.cshtml
+++ b/SeedProject_V6/Views/Home/SeedCredit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <h2 class="page-section-heading text-center text-uppercase pb-5">All Products</h2>
+    <h2 class="page-section-heading text-center text-uppercase py-5">Seed Credit</h2>
     <div class="row col-xl-12 col-md-offset-2 custyle">
         <table class="table table-striped custab">
             <thead>
@@ -22,7 +22,7 @@
                 <tr class="">
                     <td><img src="@item.ProductInfo.ProductImg" style="width: 150px; height: 150px;" /></td>
                     <td class="text-center align-middle">@item.ProductInfo.ProductDescription</td>
-                    <td class="text-center align-middle">@item.ProductInfo.ProductPrice $</td>
+                    <td class="text-center align-middle">@item.ProductInfo.ProductPrice $ <br /> <p class="border-top">Get it now for @{double discount = Convert.ToDouble(item.ProductInfo.ProductPrice); discount = discount * 0.80;} @discount$</p></td>
                     <td class="text-center align-middle"><a class='btn btn-primary' style="width: 150px;" asp-action="goToCart" asp-route-ProductID="@item.ProductId">Add to Card</a></td>
                 </tr>
             }
