--- a/SeedProject_V6/Views/Home/AcademicBoost.cshtml
+++ b/SeedProject_V6/Views/Home/AcademicBoost.cshtml
@@ -47,7 +47,7 @@
             </div>
             <div class="col-xl-12 text-secondary pt-4">
                 <div class="float-right">
-                    <a class="btn btn-primary">Register today!</a>
+                    <a class="btn btn-primary" asp-action="EnglishLearning">Register today!</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
             </div>
         <div class="col-xl-12 text-secondary pt-4">
             <div class="float-right">
-                <a class="btn btn-primary">Register today!</a>
+                <a class="btn btn-primary" asp-action="MathScience">Register today!</a>
             </div>
         </div>
         </div>
