--- a/SeedProject_V6/Views/Home/EnglishLearning.cshtml
+++ b/SeedProject_V6/Views/Home/EnglishLearning.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <h2 class="page-section-heading text-center text-uppercase pb-5">All Products</h2>
+    <h2 class="page-section-heading text-center text-uppercase py-5">English Learning</h2>
     <div class="row col-xl-12 col-md-offset-2 custyle">
         <table class="table table-striped custab">
             <thead>
@@ -20,10 +20,11 @@
             @foreach (var item in Model)
             {
                 <tr class="">
-                    <td><img src="@item.ProductInfo.ProductImg" style="width: 150px; height: 150px;" /></td>
+                    <td><img src="@item.ProductInfo.ProductImg" style="width: 150px; height: 150px;"/></td>
                     <td class="text-center align-middle">@item.ProductInfo.ProductDescription</td>
-                    <td class="text-center align-middle">@item.ProductInfo.ProductPrice $</td>
-                    <td class="text-center align-middle"><a class='btn btn-primary' style="width: 150px;" asp-action="goToCart" asp-route-ProductID="@item.ProductId">Add to Card</a></td>
+                    <td class="text-center align-middle">@item.ProductInfo.ProductPrice $ <br/> <p class="border-top">Get it now for @{double discount = Convert.ToDouble(item.ProductInfo.ProductPrice); discount = discount * 0.80;} @discount$</p></td>
+
+<td class="text-center align-middle"><a class='btn btn-primary' style="width: 150px;" asp-action="goToCart" asp-route-ProductID="@item.ProductId">Add to Card</a></td>
                 </tr>
             }
         </table>
