--- a/SeedProject_V6/Views/Home/Esl.cshtml
+++ b/SeedProject_V6/Views/Home/Esl.cshtml
@@ -65,7 +65,7 @@
             </div>
             <div class="col-xl-12 text-secondary pt-4">
                 <div class="float-right">
-                    <a class="btn btn-primary">Register today!</a>
+                    <a class="btn btn-primary" asp-action="EnglishLearning">Register today!</a>
                 </div>
             </div>
         </div>
