layout has been changed again

--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -2,18 +2,10 @@
     Layout = "_Layout";
     ViewBag.Title = "Home Page";
 }
-<header class="container-fluid bg-primary text-white text-center ">
+<header class="container-fluid bg-primary text-secondary text-center ">
     <div class="row mx-auto">
-        <!-- ONE-STOP -->
-        <div class="col-xl-2 col-lg-12 col-md-12 col-xs-12 p-0 float-left">
-            <div class="card text-white border-0 rounded-0 h-100">
-                <div class="card-body">
-                    <h5 class="card-title">ONE-STOP</h5>
-                    <p class="card-text">For kids who are struggling with scores and confidence and have slipped behind. We guarantee results!</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-7 col-md-12 col-xs-12 p-0">
+
+        <div class="col-xl-9 col-md-12 col-xs-12 p-0">
             <div id="main-carousel" class="carousel slide forceFullHeight carousel-fade" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
@@ -53,7 +45,7 @@
                 </a>
             </div><!-- /.carousel -->
         </div>
-        
+
         <!--Subject offers-->
         <div class="col-xl-3 col-lg-12 col-md-12 col-xs-12 float-right no-padding offers" id="offers">
             <div class="card border-0 rounded-0 first offer">
@@ -90,6 +82,15 @@
                         <p class="card-text">For kids who are on the fast track or need help with advanced coursework, homework and big tests.</p>
                         <a href="#" class="btn btn-primary">Learn more</a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <!-- ONE-STOP -->
+        <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12 p-0 float-left bg-secondary">
+            <div class="card text-secondary border-0 rounded-0 h-100 bg-primary">
+                <div class="card-body">
+                    <h5 class="card-title">ONE-STOP</h5>
+                    <p class="card-text">For kids who are struggling with scores and confidence and have slipped behind. We guarantee results!</p>
                 </div>
             </div>
         </div>
