--- a/SeedProject_V6/wwwroot/css/style.css
+++ b/SeedProject_V6/wwwroot/css/style.css
@@ -2,7 +2,7 @@
     height: 260px;
 }
 
-.first {
+/*.first {
     background-color: cornflowerblue;
 }
 
@@ -16,7 +16,7 @@
 
 .fourth {
     background-color: hotpink;
-}
+}*/
 
 .cardText {
     color: whitesmoke;
