--- a/SeedProject_V6/wwwroot/css/styles.css
+++ b/SeedProject_V6/wwwroot/css/styles.css
@@ -24,7 +24,7 @@
     --white: #fff;
     --gray: #6c757d;
     --gray-dark: #343a40;
-    --primary: #1abc9c;
+    --primary: #f58a07;
     --secondary: #2c3e50;
     --success: #28a745;
     --info: #17a2b8;
@@ -161,14 +161,14 @@ sup {
 }
 
 a {
-  color: #1abc9c;
+  color: white;
   text-decoration: none;
   background-color: transparent;
 }
-a:hover {
-  color: #117964;
-  text-decoration: underline;
-}
+    a:hover {
+        color: #f58a07;
+        text-decoration: underline;
+    }
 
 a:not([href]):not([class]) {
   color: inherit;
@@ -2428,7 +2428,7 @@ textarea.form-control {
   box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
 }
 .btn.disabled, .btn:disabled {
-  opacity: 0.65;
+  opacity: 0.65;        
 }
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
@@ -2439,26 +2439,26 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+    color: #fff;
+    background-color: #f58a07;
+    border-color: #f58a07;
 }
-.btn-primary:hover {
-  color: #fff;
-  background-color: #159a80;
-  border-color: #148f77;
-}
+    .btn-primary:hover {
+        color: #ffa500;
+        background-color: white;
+        border-color: #f58a07;
+    }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
   background-color: #159a80;
   border-color: #148f77;
   box-shadow: 0 0 0 0.2rem rgba(60, 198, 171, 0.5);
 }
-.btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
-}
+    .btn-primary.disabled, .btn-primary:disabled {
+        color: #fff;
+        background-color: #f58a07c;
+        border-color: #f58a07;
+    }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
   background-color: #148f77;
@@ -2679,26 +2679,26 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #1abc9c;
-  border-color: #1abc9c;
+    color: #f58a07;
+    border-color: #f58a07;
 }
-.btn-outline-primary:hover {
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
-}
+    .btn-outline-primary:hover {
+        color: #fff;
+        background-color: #f58a07;
+        border-color: #1f58a07;
+    }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
 }
-.btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #1abc9c;
-  background-color: transparent;
-}
-.btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
-}
+    .btn-outline-primary.disabled, .btn-outline-primary:disabled {
+        color: #f58a07;
+        background-color: transparent;
+    }
+    .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
+        color: #fff;
+        background-color: #f58a07;
+        border-color: #f58a07;
+    }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
 }
@@ -2879,9 +2879,9 @@ fieldset:disabled a.btn {
 }
 
 .btn-link {
-  font-weight: 400;
-  color: #1abc9c;
-  text-decoration: none;
+    font-weight: 400;
+    color: #f58a07;
+    text-decoration: none;
 }
 .btn-link:hover {
   color: #117964;
@@ -3153,11 +3153,11 @@ input[type=button].btn-block {
   text-decoration: none;
   background-color: #f8f9fa;
 }
-.dropdown-item.active, .dropdown-item:active {
-  color: #fff;
-  text-decoration: none;
-  background-color: #1abc9c;
-}
+    .dropdown-item.active, .dropdown-item:active {
+        color: #fff;
+        text-decoration: none;
+        background-color: #f58a07;
+    }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
   pointer-events: none;
@@ -3483,11 +3483,11 @@ input[type=button].btn-block {
   height: 1.25rem;
   opacity: 0;
 }
-.custom-control-input:checked ~ .custom-control-label::before {
-  color: #fff;
-  border-color: #1abc9c;
-  background-color: #1abc9c;
-}
+    .custom-control-input:checked ~ .custom-control-label::before {
+        color: #fff;
+        border-color: #f58a07;
+        background-color: #f58a07;
+    }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
 }
@@ -3541,8 +3541,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #1abc9c;
-  background-color: #1abc9c;
+    border-color: #f58a07;
+    background-color: #f58a07;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3740,18 +3740,18 @@ input[type=button].btn-block {
 .custom-range::-moz-focus-outer {
   border: 0;
 }
-.custom-range::-webkit-slider-thumb {
-  width: 1rem;
-  height: 1rem;
-  margin-top: -0.25rem;
-  background-color: #1abc9c;
-  border: 0;
-  border-radius: 1rem;
-  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  -webkit-appearance: none;
-          appearance: none;
-}
+    .custom-range::-webkit-slider-thumb {
+        width: 1rem;
+        height: 1rem;
+        margin-top: -0.25rem;
+        background-color: #f58a07;
+        border: 0;
+        border-radius: 1rem;
+        -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        -webkit-appearance: none;
+        appearance: none;
+    }
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-webkit-slider-thumb {
     -webkit-transition: none;
@@ -3771,15 +3771,15 @@ input[type=button].btn-block {
   border-radius: 1rem;
 }
 .custom-range::-moz-range-thumb {
-  width: 1rem;
-  height: 1rem;
-  background-color: #1abc9c;
-  border: 0;
-  border-radius: 1rem;
-  -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  -moz-appearance: none;
-       appearance: none;
+    width: 1rem;
+    height: 1rem;
+    background-color: #f58a07;
+    border: 0;
+    border-radius: 1rem;
+    -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    -moz-appearance: none;
+    appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-moz-range-thumb {
@@ -3800,17 +3800,17 @@ input[type=button].btn-block {
   border-radius: 1rem;
 }
 .custom-range::-ms-thumb {
-  width: 1rem;
-  height: 1rem;
-  margin-top: 0;
-  margin-right: 0.2rem;
-  margin-left: 0.2rem;
-  background-color: #1abc9c;
-  border: 0;
-  border-radius: 1rem;
-  -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  appearance: none;
+    width: 1rem;
+    height: 1rem;
+    margin-top: 0;
+    margin-right: 0.2rem;
+    margin-left: 0.2rem;
+    background-color: #f58a07;
+    border: 0;
+    border-radius: 1rem;
+    -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-ms-thumb {
@@ -3923,11 +3923,11 @@ input[type=button].btn-block {
 .nav-pills .nav-link {
   border-radius: 0.5rem;
 }
-.nav-pills .nav-link.active,
-.nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1abc9c;
-}
+    .nav-pills .nav-link.active,
+    .nav-pills .show > .nav-link {
+        color: #fff;
+        background-color: #f58a07;
+    }
 
 .nav-fill > .nav-link,
 .nav-fill .nav-item {
@@ -4560,14 +4560,14 @@ input[type=button].btn-block {
 }
 
 .page-link {
-  position: relative;
-  display: block;
-  padding: 0.5rem 0.75rem;
-  margin-left: -0.125rem;
-  line-height: 1.25;
-  color: #1abc9c;
-  background-color: #fff;
-  border: 0.125rem solid #dee2e6;
+    position: relative;
+    display: block;
+    padding: 0.5rem 0.75rem;
+    margin-left: -0.125rem;
+    line-height: 1.25;
+    color: #f58a07;
+    background-color: #fff;
+    border: 0.125rem solid #dee2e6;
 }
 .page-link:hover {
   z-index: 2;
@@ -4592,10 +4592,10 @@ input[type=button].btn-block {
   border-bottom-right-radius: 0.5rem;
 }
 .page-item.active .page-link {
-  z-index: 3;
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+    z-index: 3;
+    color: #fff;
+    background-color: #f58a07;
+    border-color: #f58a07;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4670,8 +4670,8 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: #1abc9c;
+    color: #fff;
+    background-color: #f58a07;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
@@ -4775,12 +4775,9 @@ a.badge-dark:focus, a.badge-dark.focus {
 
 .jumbotron {
     padding: 2rem 1rem;
-    background-color: #1abc9c;
+    background-color: #f5f5f5;
 }
 
-.jumbotron h2 {
-    color: #fff !important;
-}
 
 @media (min-width: 576px) {
   .jumbotron {
@@ -4946,15 +4943,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .progress-bar {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
-  color: #fff;
-  text-align: center;
-  white-space: nowrap;
-  background-color: #1abc9c;
-  transition: width 0.6s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    background-color: #f58a07;
+    transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
   .progress-bar {
@@ -5031,12 +5028,12 @@ a.badge-dark:focus, a.badge-dark.focus {
   pointer-events: none;
   background-color: #fff;
 }
-.list-group-item.active {
-  z-index: 2;
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
-}
+    .list-group-item.active {
+        z-index: 2;
+        color: #fff;
+        background-color: #f58a07;
+        border-color: #f58a07;
+    }
 .list-group-item + .list-group-item {
   border-top-width: 0;
 }
@@ -5807,6 +5804,7 @@ a.close.disabled {
 .carousel-inner {
   position: relative;
   width: 100%;
+  height: 87vh;
   overflow: hidden;
 }
 .carousel-inner::after {
@@ -5818,6 +5816,7 @@ a.close.disabled {
 .carousel-item {
   position: relative;
   display: none;
+  overflow: hidden;
   float: left;
   width: 100%;
   margin-right: -100%;
@@ -6065,7 +6064,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #f5f5f5 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6193,7 +6192,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #1abc9c !important;
+    border-color: #f58a07 !important;
 }
 
 .border-secondary {
@@ -9767,7 +9766,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #1abc9c !important;
+    color: #ffa500 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10260,26 +10259,10 @@ html {
     border-bottom: 1px solid #d3d3d3;
 }
 
-.bg-black {
-    background-color: #212529 !important;
-}
-.bg-red {
-    background-color: #FF0000 !important;
-}
-.bg-pink {
-    background-color: #FF69B4 !important;
-}
 
-.bg-secondary {
-    background-color: #2c3e50 !important;
-}
-
-.bg-primary {
-    background-color: #1abc9c !important;
-}
 
 .sub-menu .navbar-nav li.nav-item a.nav-link:hover {
-    color: #1abc9c;
+    color: #d78407;
 }
 
 
@@ -10340,6 +10323,10 @@ html {
         height: 2rem;
         width: 32%;
     }
+
+    .carousel-inner {
+        height: 70vh;
+    }
 }
 
 @media only screen and (max-width: 1199px) {
@@ -10357,6 +10344,10 @@ html {
         width: initial;
     }
 
+    .carousel-inner {
+        height: 85vh;
+    }
+
 }
 
 @media only screen and (max-width: 765px) {
@@ -10365,111 +10356,134 @@ html {
         max-height: 300px;
     }
 
+    .carousel-inner {
+        height: 55vh;
+    }
+
 }
 
-@media only screen and (max-width: 391px) {
-    .top-nav {
-        flex-direction: row;
-    }
+@media only screen and (max-width: 600px) {
 
-    .main-menu h4 {
-        font-size: 1rem!important;
-    }
-
-    .main-menu {
-        padding-bottom:0rem!important;
-    }
-
-    .navbar-nav .nav-link {
-        padding-right: 0;
-        padding-left: 0.5rem;
+    .carousel-inner {
+        height: 45vh;
     }
 }
 
-.parents {
-    object-fit: cover !important;
-    object-position: 100% 0 !important;
-    width: 348px;
-    height: 234px;
-    
+    @media only screen and (max-width: 391px) {
+        .top-nav {
+            flex-direction: row;
+        }
+
+        .main-menu h4 {
+            font-size: 1rem !important;
+        }
+
+        .main-menu {
+            padding-bottom: 0rem !important;
+        }
+
+        .navbar-nav .nav-link {
+            padding-right: 0;
+            padding-left: 0.5rem;
+        }
+
+        .carousel-inner {
+            height: 35vh;
+        }
+    }
+
+@media only screen and (max-width: 300px) {
+
+    .carousel-inner {
+        height: 40vh;
+    }
 }
 
-.students {
+    .parents {
+        object-fit: cover !important;
+        object-position: 100% 0 !important;
+        width: 348px;
+        height: 234px;
+    }
 
-    object-fit: cover !important;
-    object-position: 100% 0 !important;
-    width: 348px;
-    height: 234px;
-}
+    .students {
+        object-fit: cover !important;
+        object-position: 100% 0 !important;
+        width: 348px;
+        height: 234px;
+    }
 
-.custom-bg {
-    border-radius: 50%;
-}
+    .custom-bg {
+        border-radius: 50%;
+    }
 
-.progress-text {
-    background-color: #e9ecef;
-}
-
-
-.contact-form {
-    background: #fff;
-    margin-top: 3rem;
-    margin-bottom: 5%;
-    padding: 0px 20px 20px 20px;
-    width: 70%;
-    border-radius: 20px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-
-.contact-form .form-control{
-    border-radius:1rem;
-}
-.contact-image{
-    text-align: center;
-}
-.contact-image img{
-    border-radius: 6rem;
-    width: 11%;
-    transform: rotate(29deg);
-}
-
-.contact-form h3{
-    text-align: center;
-}
-
-.contact-form .btnContact {
-    width: 200px;
-    padding: 0.5rem;
-    border: none;
-    border-radius: 1rem;
-    color: white;
-    background-color: #1abc9c;
-    font-weight: 600;
-    cursor: pointer;
-}
-.btnContactSubmit {
-    width: 50%;
-    color: white;
-    border-radius: 1rem;
-    background-color: #1abc9c;
-    border: none;
-    cursor: pointer;
-}
-
-.btnContact:hover {
-    background-color: #159a80;
-}
+    .progress-text {
+        background-color: #e9ecef;
+    }
 
 
-.form-section {
-    padding-bottom: 0;
+    .contact-form {
+        background: #fff;
+        margin-top: 3rem;
+        margin-bottom: 5%;
+        padding: 0px 20px 20px 20px;
+        width: 70%;
+        border-radius: 20px;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
+
+        .contact-form .form-control {
+            border-radius: 1rem;
+        }
+
+    .contact-image {
+        text-align: center;
+    }
+
+        .contact-image img {
+            border-radius: 6rem;
+            width: 11%;
+            transform: rotate(29deg);
+        }
+
+    .contact-form h3 {
+        text-align: center;
+    }
+
+    .contact-form .btnContact {
+        width: 200px;
+        padding: 0.5rem;
+        border: none;
+        border-radius: 1rem;
+        color: white;
+        background-color: #f58a07;
+        font-weight: 600;
+        cursor: pointer;
+    }
+
+    .btnContactSubmit {
+        width: 50%;
+        color: white;
+        border-radius: 1rem;
+        background-color: #f58a07;
+        border: none;
+        cursor: pointer;
+    }
+
+    .btnContact:hover {
+        background-color: #159a80;
+    }
+
+
+    .form-section {
+        padding-bottom: 0;
+    }
 }
 
 .carousel-img {
-    background-color: #35918c;
+    background-color: rgba(143, 151, 150, 1);
 }
-
-.carousel-indicators li {
+    .carousel-indicators li {
     width: 10px;
     height: 10px;
     border-radius: 100%;
@@ -10480,7 +10494,7 @@ html {
 }
 
 .partners-link:hover {
-    color: #1abc9c;
+    color: #f58a07;
 }
 
 .dropdown:hover .dropdown-menu {
